--- a/README
+++ b/README
@@ -1,9 +1,12 @@
 BEERDUINO is a small arduino project.
-Designed to read various Dallas DS18B20 sensors (on a 1wire bus).
-The program is designed to run on Arduino Board + Ethernet Shield.
-Reads multiple sensors temperatures.
-Embed a small web-server able to load simple HTML page and XML page with the temperature values.
-Can send a mail if temperature limits are reached.
+- The program is designed to run on Arduino Board + Ethernet Shield.
+- Designed to read various Dallas DS18B20 sensors (on a 1wire bus).
+- Reads multiple sensors temperatures.
+- Embed a small web-server able to load simple HTML page and XML page with the temperature values.
+- Can send a mail if temperature limits are reached.
+
+Tested with Arduino 022 ( http://arduino.cc/ ) on a Duemilanove board.
+Binary size < 16384 octets at this time.
 
 Use a few libraries (included in this github) :
 - OneWire (v2) ( http://www.pjrc.com/teensy/td_libs_OneWire.html ) ;
