--- a/README
+++ b/README
@@ -5,8 +5,12 @@ BEERDUINO is a small arduino project.
 - Embed a small web-server able to load simple HTML page and XML page with the temperature values.
 - Can send a mail if temperature limits are reached.
 
-Tested with Arduino 022 ( http://arduino.cc/ ) on a Duemilanove board.
+Tested with Arduino 023 ( http://arduino.cc/ ) on a Duemilanove board.
 Binary size < 16384 octets at this time.
+
+For the JAVA program :
+- the sketchbook whole project is an Eclipse workspace (switch workspace to it), and the "java/" path is a Eclipse project ;
+- needs Maven (external to Eclipse or embedded Maven 3 with Eclipse 3.7+) ;
 
 Use a few libraries (included in this github) :
 - OneWire (v2) ( http://www.pjrc.com/teensy/td_libs_OneWire.html ) ;
